force-app/main/default/objects/Contact/fields/Account_Employees__c.field-meta.xml
<CustomField>
    <fullName>Account_Employees__c</fullName>
    <description>Account Employees Reference Field for Reply &amp; Listviews</description>
    <formula>Account.NumberOfEmployees</formula>
    <inlineHelpText>Account Employees Reference Field for Reply &amp; Listviews</inlineHelpText>
    <label>Account Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>