force-app/main/default/objects/Contact/fields/Account_HeyJobs_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_HeyJobs_Category__c</fullName>
    <description>Account HeyJobs - Category Reference Field for Reply &amp; Listviews</description>
    <formula>TEXT(Account.HeyJobs_Category__c )</formula>
    <inlineHelpText>Account HeyJobs - Category Reference Field for Reply &amp; Listviews</inlineHelpText>
    <label>Account HeyJobs - Category</label>
    <type>Text</type>
</CustomField>