force-app/main/default/objects/Contact/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>References the Account Name for Lightning Email Templates</description>
    <formula>Account.Name</formula>
    <inlineHelpText>Primär-Account mir dem der Kontakt verbunden ist.</inlineHelpText>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>