force-app/main/default/objects/Contact/fields/Account_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Email__c</fullName>
    <description>RO-1296 / Used in Zapier</description>
    <formula>Account.Owner_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Email</label>
    <type>Text</type>
</CustomField>