force-app/main/default/objects/Contact/fields/acquisition_stage_ts__c.field-meta.xml
<CustomField>
    <fullName>acquisition_stage_ts__c</fullName>
    <description>Attribution fields from the b2b_mta bi_analytics_dbt model pulled in via hightouch.</description>
    <inlineHelpText>Attribution fields from the b2b_mta bi_analytics_dbt model pulled in via hightouch.</inlineHelpText>
    <label>acquisition_stage_ts</label>
    <type>DateTime</type>
</CustomField>