force-app/main/default/objects/Contact/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Zeigt, ob ein Kontakt aktiv ist oder nicht. Inactive Kontakte werden von allen Marketing Kampagnen ausgeschlossen. Kontakte sollten nur auf inactive gestellt werden, wenn sie weder für Sales noch für Marketing Relevanz haben.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>