force-app/main/default/objects/Contact/fields/Active_in_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Active_in_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active in Campaign</label>
    <type>Checkbox</type>
</CustomField>