force-app/main/default/objects/Contact/fields/Active_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Active_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Active Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>