force-app/main/default/objects/Contact/fields/Adjusted_SLA_1__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_SLA_1__c</fullName>
    <description>RO - 2444</description>
    <formula>IF(
    ISPICKVAL(SLA_1_status__c, &quot;&quot;),
    NULL,
    IF(
        AND(
            ISPICKVAL(SLA_1_status__c, &quot;In Progress&quot;),
            OR(
                ISNULL(Timestamp_Latest_Opp_Contact_Role__c),
                Timestamp_Latest_Opp_Contact_Role__c &lt; Timestamp_Became_a_MQL_Contact_Latest__c
            )
        ),
        (NOW() - Timestamp_Became_a_MQL_Contact_Latest__c) * 24 - 
        (
            FLOOR(
                ((NOW() - Timestamp_Became_a_MQL_Contact_Latest__c) * 24 / 24 + 
                WEEKDAY(DATEVALUE(Timestamp_Became_a_MQL_Contact_Latest__c)) - 1) / 7
            ) * 48
        ),
        IF(
            AND(
                NOT(ISNULL(Timestamp_Latest_Opp_Contact_Role__c)),
                Timestamp_Latest_Opp_Contact_Role__c &gt; Timestamp_Became_a_MQL_Contact_Latest__c,
                NOT(ISPICKVAL(SLA_1_status__c, &quot;Lost&quot;))
            ),
            (Timestamp_Latest_Opp_Contact_Role__c - Timestamp_Became_a_MQL_Contact_Latest__c) * 24 -
            (
                FLOOR(
                    ((Timestamp_Latest_Opp_Contact_Role__c - Timestamp_Became_a_MQL_Contact_Latest__c) * 24 / 24 + 
                    WEEKDAY(DATEVALUE(Timestamp_Became_a_MQL_Contact_Latest__c)) - 1) / 7
                ) * 48
            ),
            IF(
                AND(
                    ISPICKVAL(SLA_1_status__c, &quot;Lost&quot;),
                    Account.Timestamp_Acc_Lifecycle_Stage_Outbound__c &gt; Timestamp_Became_a_MQL_Contact_Latest__c
                ),
                (Account.Timestamp_Acc_Lifecycle_Stage_Outbound__c - Timestamp_Became_a_MQL_Contact_Latest__c) * 24 -
                (
                    FLOOR(
                        ((Account.Timestamp_Acc_Lifecycle_Stage_Outbound__c - Timestamp_Became_a_MQL_Contact_Latest__c) * 24 / 24 + 
                        WEEKDAY(DATEVALUE(Timestamp_Became_a_MQL_Contact_Latest__c)) - 1) / 7
                    ) * 48
                ),
                NULL
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This the time taken excluding the weekends.</inlineHelpText>
    <label>Adjusted SLA 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>