force-app/main/default/objects/Contact/fields/Average_paid_credit_used__c.field-meta.xml
<CustomField>
    <fullName>Average_paid_credit_used__c</fullName>
    <formula>0</formula>
    <label>Legacy Average paid credit used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>