force-app/main/default/objects/Contact/fields/Backend_access_enabled__c.field-meta.xml
<CustomField>
    <fullName>Backend_access_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-1639</description>
    <inlineHelpText>Triggering field for BE company + user creation</inlineHelpText>
    <label>Backend access enabled</label>
    <type>Checkbox</type>
</CustomField>