force-app/main/default/objects/Contact/fields/Blacklist__c.field-meta.xml
<CustomField>
    <fullName>Blacklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Blacklist Contact for Campaigns</description>
    <inlineHelpText>Zeigt, dass der Kontakt nicht mehr angegangen werden soll, e.g. weil der Kontakt nie wieder von Heyjobs kontaktiert werden möchte. Geblacklistete Kontakte sind von allen marketing Kampagnen ausgeschlossen.</inlineHelpText>
    <label>Blacklist</label>
    <type>Checkbox</type>
</CustomField>