force-app/main/default/objects/Contact/fields/Bookings_last_12_months__c.field-meta.xml
<CustomField>
    <fullName>Bookings_last_12_months__c</fullName>
    <formula>Account.Bookings_last_12_months__c</formula>
    <label>Bookings last 12 months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>