force-app/main/default/objects/Contact/fields/Bookit_Log_ID__c.field-meta.xml
<CustomField>
    <fullName>Bookit_Log_ID__c</fullName>
    <description>Bookit Forms Log ID to associate meeting and contact.</description>
    <inlineHelpText>Bookit Forms Log ID to associate meeting and contact.</inlineHelpText>
    <label>Bookit Log ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>