force-app/main/default/objects/Contact/fields/Bookkeeper__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeper__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is marked if the contact is responsible for bookkeeping in his related companies. Data Owner is Finance</description>
    <inlineHelpText>Is marked TRUE if the contact is responsible for bookkeeping in his related companies.</inlineHelpText>
    <label>Bookkeeper</label>
    <type>Checkbox</type>
</CustomField>