force-app/main/default/objects/Contact/fields/Category_3__c.field-meta.xml
<CustomField>
    <fullName>Category_3__c</fullName>
    <description>Account Category 3 Reference Field for Reply &amp; Listviews</description>
    <formula>TEXT( Account.Category_3__c )</formula>
    <inlineHelpText>Account Category 3 Reference Field for Reply &amp; Listviews</inlineHelpText>
    <label>Account Category 3</label>
    <type>Text</type>
</CustomField>