force-app/main/default/objects/Contact/fields/Contact_ID_18_digit__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_18_digit__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <label>Contact ID (18)</label>
    <type>Text</type>
</CustomField>