force-app/main/default/objects/Contact/fields/Contact_Insert_Source__c.field-meta.xml
<CustomField>
    <fullName>Contact_Insert_Source__c</fullName>
    <description>This field is populated for mass inserts and defines the source of the account information. This is used for tracking and cleanup.</description>
    <inlineHelpText>This field is populated for mass inserts and defines the source of the account information. This is used for tracking and cleanup.</inlineHelpText>
    <label>Contact Insert Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>e-Commerce</fullName>
            </value>
            <value>
                <fullName>WZW</fullName>
            </value>
            <value>
                <fullName>CreFo</fullName>
            </value>
            <value>
                <fullName>Index Anzeigendaten</fullName>
            </value>
            <value>
                <fullName>Dealfront</fullName>
            </value>
            <value>
                <fullName>Webinar Laura</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Upload</fullName>
            </value>
            <value>
                <fullName>Recruiter Portal</fullName>
            </value>
            <value>
                <fullName>FrontApp</fullName>
            </value>
            <value>
                <fullName>Clay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>