force-app/main/default/objects/Contact/fields/Contact_Opted_in_Events__c.field-meta.xml
<CustomField>
    <fullName>Contact_Opted_in_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for HS Sync</description>
    <label>Legacy Opted in: Events</label>
    <type>Checkbox</type>
</CustomField>