force-app/main/default/objects/Contact/fields/Contact_Opted_in_HeyJobs_Product__c.field-meta.xml
<CustomField>
    <fullName>Contact_Opted_in_HeyJobs_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for HS sync</description>
    <label>Legacy Opted in: HeyJobs Product</label>
    <type>Checkbox</type>
</CustomField>