force-app/main/default/objects/Contact/fields/Custom_Lead_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Custom_Lead_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-1429</description>
    <inlineHelpText>Contact is a converted lead, converted through custom lead conversion</inlineHelpText>
    <label>Custom Lead Conversion</label>
    <type>Checkbox</type>
</CustomField>