force-app/main/default/objects/Contact/fields/DataGroomr_Merged_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>DataGroomr_Merged_Lead_Id__c</fullName>
    <label>DataGroomr Merged Lead Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>