force-app/main/default/objects/Contact/fields/Dealfront_ID_Contact__c.field-meta.xml
<CustomField>
    <fullName>Dealfront_ID_Contact__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used to identify records from dealfront</description>
    <externalId>true</externalId>
    <label>Dealfront ID (Contact)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>