force-app/main/default/objects/Contact/fields/Deduplication_Parent__c.field-meta.xml
<CustomField>
    <fullName>Deduplication_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Temporary field for Contact Deduplication</description>
    <label>Deduplication Parent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>DuplicateContacts</relationshipName>
    <type>Lookup</type>
</CustomField>