force-app/main/default/objects/Contact/fields/Demo_Hunter__c.field-meta.xml
<CustomField>
    <fullName>Demo_Hunter__c</fullName>
    <description>Can be retired, is not in use anymore. to be retired</description>
    <label>Legacy_Demo Hunter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annika Wittkowski</fullName>
            </value>
            <value>
                <fullName>Charleen Göllner</fullName>
            </value>
            <value>
                <fullName>Diana Bloß</fullName>
            </value>
            <value>
                <fullName>Felix-Maximilian Wolf</fullName>
            </value>
            <value>
                <fullName>Karolin Weyer</fullName>
            </value>
            <value>
                <fullName>Karol M. Czuba</fullName>
            </value>
            <value>
                <fullName>Kevin Kadillari</fullName>
            </value>
            <value>
                <fullName>Laura Ritz</fullName>
            </value>
            <value>
                <fullName>Niklas Menke</fullName>
            </value>
            <value>
                <fullName>Oliver Sellschopp</fullName>
            </value>
            <value>
                <fullName>Sissi Greifendorf</fullName>
            </value>
            <value>
                <fullName>Tim Koch</fullName>
            </value>
            <value>
                <fullName>Tobias Eppler</fullName>
            </value>
            <value>
                <fullName>Florian Przybilla</fullName>
            </value>
            <value>
                <fullName>Anna-Lena Eggert</fullName>
                <isActive>false</isActive>
                <label>Anna-Lena Eggert</label>
            </value>
            <value>
                <fullName>Julia Unger</fullName>
                <isActive>false</isActive>
                <label>Julia Unger</label>
            </value>
            <value>
                <fullName>Kasimir Rantzau</fullName>
                <isActive>false</isActive>
                <label>Kasimir Rantzau</label>
            </value>
            <value>
                <fullName>Martin Roberts</fullName>
                <isActive>false</isActive>
                <label>Martin Roberts</label>
            </value>
            <value>
                <fullName>Stephan Ruppel</fullName>
                <isActive>false</isActive>
                <label>Stephan Ruppel</label>
            </value>
            <value>
                <fullName>Tanya Langenkamp</fullName>
                <isActive>false</isActive>
                <label>Tanya Langenkamp</label>
            </value>
            <value>
                <fullName>Torsten Depping</fullName>
                <isActive>false</isActive>
                <label>Torsten Depping</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>