force-app/main/default/objects/Contact/fields/Direct_Mail_Code__c.field-meta.xml
<CustomField>
    <fullName>Direct_Mail_Code__c</fullName>
    <description>This is the Direct mail code entered by the customer. RO-486</description>
    <inlineHelpText>This is the Direct mail code entered by the customer.</inlineHelpText>
    <label>Direct Mail Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>