force-app/main/default/objects/Contact/fields/Duplicate_Contact__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RO-2712</description>
    <label>Duplicate Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Duplicate Contact)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>