force-app/main/default/objects/Contact/fields/Email_verified__c.field-meta.xml
<CustomField>
    <fullName>Email_verified__c</fullName>
    <inlineHelpText>Bestimmt ob die Emailadresse des Kontakts von Marketing angegangen werden kann. 

OK: Kontakt erhält Emails.
Risky: Die E-Mail-Adresse ist nicht verifiziert und die gesendete E-Mail wird zurückgesendet.
Bounded: Emails erreichen den Kontakt nicht. Die Emailadresse ist wahrscheinlich nicht korrekt. 
Unsubscribed: Melden den Kontakt von allen Marketing Emails ab. 
No Cold Email: Den Kontakt nur von allen Cold E-Mails (Marius Luther Mails) abmelden.</inlineHelpText>
    <label>Email verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Risky</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>No Email</fullName>
                <label>No Cold Email</label>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
            <value>
                <fullName>No Nurturing Email</fullName>
            </value>
            <value>
                <fullName>Catchall</fullName>
                <isActive>false</isActive>
                <label>Catchall</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>