force-app/main/default/objects/Contact/fields/emailSecondaryEmail__c.field-meta.xml
<CustomField>
    <fullName>emailSecondaryEmail__c</fullName>
    <inlineHelpText>Beinhaltet die zweite (sekundäre) Emailadresse eines Kontakts.</inlineHelpText>
    <label>Secondary Email</label>
    <type>Email</type>
</CustomField>