force-app/main/default/objects/Contact/fields/Employee_fluctuation_rate__c.field-meta.xml
<CustomField>
    <fullName>Employee_fluctuation_rate__c</fullName>
    <formula>0</formula>
    <label>Legacy Employee fluctuation rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>