force-app/main/default/objects/Contact/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <description>RO-1605</description>
    <inlineHelpText>Zeigt die Engagement Punktzahl, die der Kontakt erreicht hat. Um so höher der Score ist, desto “heißer” ist der Kontakt und sollte angegangen werden. 
Mehr Informationen zum Engagement Score und wie er berechnet wird findest du hier: https://heyjobs.atlassian.net/wiki/spaces/BM/pages/3145138239</inlineHelpText>
    <label>Engagement Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>