force-app/main/default/objects/Contact/fields/Enrichment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Status__c</fullName>
    <description>This field is the basis for some Clay enrichment processes and captures where in the process the contact currently is. This field is initially populated by LeanData, then altered by Clay.</description>
    <label>Enrichment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrichment Pending</fullName>
            </value>
            <value>
                <fullName>Enrichment Successful</fullName>
            </value>
            <value>
                <fullName>Enrichment Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>