force-app/main/default/objects/Contact/fields/Estimated_wallet_size__c.field-meta.xml
<CustomField>
    <fullName>Estimated_wallet_size__c</fullName>
    <formula>Account.Estimated_Wallet_Size__c</formula>
    <label>Estimated wallet size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>