force-app/main/default/objects/Contact/fields/Event_Attended__c.field-meta.xml
<CustomField>
    <fullName>Event_Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Attended</label>
    <type>Checkbox</type>
</CustomField>