force-app/main/default/objects/Contact/fields/Event_Lead_Classification__c.field-meta.xml
<CustomField>
    <fullName>Event_Lead_Classification__c</fullName>
    <description>Used to prioritise the list views after ZP event</description>
    <inlineHelpText>Used to prioritise the list views after ZP event</inlineHelpText>
    <label>Legacy-Event Lead Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HOT</fullName>
            </value>
            <value>
                <fullName>WARM</fullName>
            </value>
            <value>
                <fullName>COLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>