force-app/main/default/objects/Contact/fields/Event_Lead_Classification_Contact__c.field-meta.xml
<CustomField>
    <fullName>Event_Lead_Classification_Contact__c</fullName>
    <label>Event Lead Classification (Contact)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HOT</fullName>
            </value>
            <value>
                <fullName>WARM</fullName>
            </value>
            <value>
                <fullName>COLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>