force-app/main/default/objects/Contact/fields/Exclude_from_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Outreach__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Wenn diese Option auf „TRUE“ gesetzt ist, wird der Kontakt nicht in die Outreach-Kampagnen aufgenommen. Diese Einstellung wird nach 6 Wochen automatisch auf „FALSCH“ gesetzt.</inlineHelpText>
    <label>Exclude from Outreach</label>
    <type>Checkbox</type>
</CustomField>