force-app/main/default/objects/Contact/fields/Exclude_MQLs_contact__c.field-meta.xml
<CustomField>
    <fullName>Exclude_MQLs_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-1743</description>
    <inlineHelpText>If this checkbox is true the MQL will not appear in Sales List views or SSSU MQL tracking that filter for this property</inlineHelpText>
    <label>Exclude MQLs</label>
    <type>Checkbox</type>
</CustomField>