force-app/main/default/objects/Contact/fields/fmlDialMobile__c.field-meta.xml
<CustomField>
    <fullName>fmlDialMobile__c</fullName>
    <formula>HYPERLINK(&quot;CALLTO:&quot;&amp;MobilePhone,MobilePhone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dial Mobile</label>
    <type>Text</type>
</CustomField>