force-app/main/default/objects/Contact/fields/fmlLetterSalutation__c.field-meta.xml
<CustomField>
    <fullName>fmlLetterSalutation__c</fullName>
    <label>Letter Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>