force-app/main/default/objects/Contact/fields/FrontApp_Recent_Response_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>FrontApp_Recent_Response_Timestamp__c</fullName>
    <label>FrontApp Recent Response Timestamp</label>
    <type>Date</type>
</CustomField>