force-app/main/default/objects/Contact/fields/GCLID__c.field-meta.xml
<CustomField>
    <fullName>GCLID__c</fullName>
    <label>GCLID</label>
    <type>TextArea</type>
</CustomField>