force-app/main/default/objects/Contact/fields/Heyassessment_Deactivation_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Heyassessment_Deactivation_Reason_Detail__c</fullName>
    <label>Heyassessment Deactivation Reason Detail</label>
    <type>TextArea</type>
</CustomField>