force-app/main/default/objects/Contact/fields/HRegister_Number__c.field-meta.xml
<CustomField>
    <fullName>HRegister_Number__c</fullName>
    <description>Handelregister number of the associated company</description>
    <formula>Account.HRegister_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Handelregister number of the associated company</inlineHelpText>
    <label>HRegister Number</label>
    <type>Text</type>
</CustomField>