force-app/main/default/objects/Contact/fields/Inactive_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inactive Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Inactive Lookup)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>