force-app/main/default/objects/Contact/fields/Inbound_Form__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Form__c</fullName>
    <inlineHelpText>Zeigt die letzt Inbound Form Submission, die ein Kontakt getätigt hat.</inlineHelpText>
    <label>Inbound Form</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>