force-app/main/default/objects/Contact/fields/Interested_in_Demo__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Demo__c</fullName>
    <description>Used in Hubspot forms to check which leads request a demo</description>
    <inlineHelpText>Zeigt, ob der Kontakt im zuletzt eingereichten Marketing formular eine Demo angefordert hat.</inlineHelpText>
    <label>Interested in Demo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo_Default_Empty</valueSetName>
    </valueSet>
</CustomField>