force-app/main/default/objects/Contact/fields/Invoice_Contact__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Contact</label>
    <type>Checkbox</type>
</CustomField>