force-app/main/default/objects/Contact/fields/Is_Agency_contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Agency_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to filter inbound agency leads from events</description>
    <label>legacy-Is Agency contact?</label>
    <type>Checkbox</type>
</CustomField>