force-app/main/default/objects/Contact/fields/Is_Original_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Original_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary field for contact_deduplication</description>
    <label>Is Original Contact</label>
    <type>Checkbox</type>
</CustomField>