force-app/main/default/objects/Contact/fields/Is_ZP_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_ZP_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ZP Contact?</label>
    <type>Checkbox</type>
</CustomField>