force-app/main/default/objects/Contact/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <description>To check If the Contact is active or not</description>
    <formula>IF( Active__c = TRUE, &quot;Yes&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsActive</label>
    <type>Text</type>
</CustomField>