force-app/main/default/objects/Contact/fields/Job_Ingestion_Recruiter_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_Ingestion_Recruiter_ID__c</fullName>
    <description>UUID5 of the recruiter details parsed from the jobs during the job parsing process/ingestion.</description>
    <inlineHelpText>UUID5 of the recruiter details parsed from the jobs during the job parsing process/ingestion.</inlineHelpText>
    <label>Job Ingestion Recruiter ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>